fix: Add padding between moon phases and hand on small-height screens

--- a/frontend/static/styles.css
+++ b/frontend/static/styles.css
@@ -189,6 +189,7 @@ body {
 #moon-phases-area {
   display: grid;
   padding: 3px;
+  margin: 4px;
   border-radius: 7px;
   background-color: #dddddd;
 }
